--- a/template.yaml
+++ b/template.yaml
@@ -37,4 +37,9 @@ Outputs:
     Export: {
       Name: !Sub '${AWS::StackName}:HelloWorldFunction:Arn'
     }
-
+  HelloWorldApi:
+    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/api/alexa/"
+  HelloWorldFunctionIamRole:
+    Description: "Implicit IAM Role created for Hello World function"
+    Value: !GetAtt HelloWorldFunctionRole.Arn
